--- a/conf.ini
+++ b/conf.ini
@@ -1,7 +1,7 @@
 [juejin]
 aid = 2608
-uuid = 6971404364696356363
+uuid = 6896840858072679944
 booklet_id = 7069596046602534919
-book_name = 深入剖析Dubbo架构设计和实现原理
+book_name = test
 get_section_dir_url = https://api.juejin.cn/booklet_api/v1/booklet/get?aid=${juejin:aid}&uuid=${juejin:uuid}
 get_section_content_url = https://api.juejin.cn/booklet_api/v1/section/get?aid=${juejin:aid}&uuid=${juejin:uuid}
